src/test/deca/context/valid/created/exp_bin/op_comp/neq.deca
// Description :
//    test neq 
//
// Resultats :
//		Ok

{
int a;
float b;
boolean d;
boolean c = 1 != 2;
c = 0.5 != 2;
c = 1 != 0.2;
c = 0.1 != 0.1;
c = a != 2;
c = a != 0.2;
c = 2 != a;
c = 0.2 != a;
c = a != a;
c = b != 2;
c = b != 0.2;
c = 2 != b;
c = 0.2 != b;
c = b != b;
c = a != b;

c = false != true;
c = false != false;
c = true != false;
c = true != true;
c = d != true;
c = d != false;
c = true != d;
c = false != d;
c = d != d;
}