src/test/deca/context/invalid/created/binary_exp/op_comp/neq_int_boolean.deca
// Description :
//    test neq entre un int et un boolean
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: (3.33) Opérandes de type int, boolean, attendu: (int|float, int|float) ou (class|null, class|null) ou (bool, bool)

{
int a;
boolean b;
boolean c = a != b;
}
